EVA-234 feat: Creación del View para poder realizar la modificación del estado y el motivo del grupo de actividades cuando se Elimina.
-modificación de los nombres de los permisos en las tarjetas de grupo de actividades de acuerdo a los modelos.
- modificación de los nombres de los permisos en los menus del modulo GA de acuerdo a los modelos.

--- a/GestionActividades/templates/GestionActividades/_common/_tarjeta_grupo_actividad.html
+++ b/GestionActividades/templates/GestionActividades/_common/_tarjeta_grupo_actividad.html
@@ -9,13 +9,16 @@
                         <i class="fal fa-angle-down d-inline-block ml-1 fs-md"></i>
                     </a>
                     <div class="col-md-12">
-                    {% if perms.GestionActividades.view_grupoactividades %}
+                    {% if perms.GestionActividades.view_grupoactividad %}
                         <div class="dropdown-menu">
-                            {% if perms.GestionActividades.change_grupoactividades %}
+                            {% if perms.GestionActividades.change_grupoactividad %}
                                 <a class="dropdown-item" href="javascript:abrirModalCrearGrupoActividad('{% url 'GestionActividades:grupo-actividades-editar' grupo_actividad.id%}', '{{ asociado }}')">Editar</a>
                             {% endif %}
-                            {% if perms.GestionActividades.view_grupoactividades %}
+                            {% if perms.GestionActividades.view_grupoactividad %}
                                 <a class="dropdown-item" href="{% url 'GestionActividades:actividades-index' id_grupo%}">Detalle</a>
+                            {% endif %}
+                            {% if perms.GestionActividades.delete_grupoactividad %}
+                                <a class="dropdown-item" href="javascript:void(0);" id="eliminar_{{ id_grupo }}"   onclick="fConfirmarEliminar({{ id_grupo }}, 1)">Eliminar</a>
                             {% endif %}
                         </div>
                     {% endif %}
