EVA-233 feat: Se implementan los permisos de adición, edición y eliminación de la reserva de la sala de juntas

--- a/Administracion/templates/Administracion/SalaJuntas/modal_crear_editar_reserva.html
+++ b/Administracion/templates/Administracion/SalaJuntas/modal_crear_editar_reserva.html
@@ -43,13 +43,17 @@
                 <div class="modal-footer">
                     <button data-dismiss="modal" class="btn btn-warning btn-pills " href="javascript:void(0);"  onclick="fbtnCancelar()">Cancelar</button>
                     {% if not cierre %}
-                        <button id="agregar_{{ reserva.id }}" type="submit" class="btn btn-primary btn-pills"> {% if editar %}Editar{% else %}Agregar{% endif %} </button>
+                        {% if perms.Administracion.add_reservasalajuntas or perms.Administracion.change_reservasalajuntas %}
+                            <button id="agregar_{{ reserva.id }}" type="submit" class="btn btn-primary btn-pills"> {% if editar %}Editar{% else %}Agregar{% endif %} </button>
+                        {% endif %}
                     {% endif %}
                     {% if editar %}
                         {% if finalizar or cierre %}
                             <a type="button" class="btn btn-danger btn-pills" id="finalizar_{{ reserva.id }}" href="javascript:void(0);"  onclick="fFinalizarReunion({{ reserva.id }})" >Finalizar</a>
                         {% else %}
-                            <a type="button" class="btn btn-danger btn-pills" id="eliminar_{{ reserva.id }}" href="javascript:void(0);"  onclick="fEliminarReunion({{ reserva.id }}, true)" >Eliminar</a>
+                            {% if perms.Administracion.delete_reservasalajuntas %}
+                                <a type="button" class="btn btn-danger btn-pills" id="eliminar_{{ reserva.id }}" href="javascript:void(0);"  onclick="fEliminarReunion({{ reserva.id }}, true)" >Eliminar</a>
+                            {% endif %}
                         {% endif %}
                     {% endif %}
                 </div>
