EVA-235 refactor: Se ajusta el ancho de las columnas para la tabla de consecutivos de contratos. - Se deja la fecha de creación para que se muestre con el + de la tabla.

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
@@ -45,7 +45,7 @@
                                                 <tr>
                                                     <th data-priority="1" class="min-w-100">Consecutivo</th>
                                                     <th>Nombre</th>
-                                                    <th class="min-desktop">Fecha de Creación</th>
+                                                    <th class="none">Fecha de Creación</th>
                                                     <th>Fecha de Inicio</th>
                                                     <th>Fecha Final</th>
                                                     <th class="min-tablet-l">Tipo de Contrato</th>
