--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/_modal_crear_editar_oficio.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/_modal_crear_editar_oficio.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="form-group">
                         <div class="col-md-12">
-                            {% input_textarea_tag 'detalle' 'Descripción del Documento' placeholder="Ingrese una descripción" required="" maxlength="300" value=consecutivo.detalle mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
+                            {% input_textarea_tag 'detalle' 'Descripción' placeholder="Ingrese una descripción" required="" maxlength="300" value=consecutivo.detalle mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
                         </div>
                 </div>
                 {% if editar %}
