--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoViaticosComisiones/_modal_crear_editar_consecutivo.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoViaticosComisiones/_modal_crear_editar_consecutivo.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="form-group">
                         <div class="col-md-12">
-                            {% input_textarea_tag 'descripcion' 'Descripción del Documento' placeholder="Ingrese una descripción" required="" maxlength="300" value=consecutivo.descripcion mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
+                            {% input_textarea_tag 'descripcion' 'Descripción' placeholder="Ingrese una descripción" required="" maxlength="300" value=consecutivo.descripcion mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
                         </div>
                 </div>
                 {% if editar %}
